client/src/components/ui/CustomCard/customCard.css
.cards {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 15px;
  margin-left: 1em;
}

.cards .black {
  background-color: #333333;
}

.cards .card {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: row;
  text-align: left;
  height: 150px;
  width: 80%;
  border-radius: 10px;
  color: white;
  cursor: pointer;
  transition: 400ms;
  padding: 20px;
  gap: 2em;
}

.cards .card p.tip {
  font-size: 1.3em;
  font-weight: 700;
  margin: 0; /* Supprimer les marges */
}

.cards .card p.second-text {
  font-size: 1.1em;
  font-weight: 700;
  color: #9fc4d0;
  margin: 0; /* Supprimer les marges */
}

.cards .card:hover {
  transform: scale(1.1, 1.1);
}

.cards:hover > .card:not(:hover) {
  transform: scale(0.9, 0.9);
}

.card.black {
  display: flex;
  align-items: center;
}

.icon {
  width: 2em;
  height: 2em;
  margin-right: 10px;
}

.text-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

